--- a/src/components/matches-section/matches-section.scss
+++ b/src/components/matches-section/matches-section.scss
@@ -138,7 +138,7 @@
   &__box {
     background-color: #fff;
     position: relative;
-    z-index: 999;
+    z-index: 98;
     margin-bottom: 40px;
     flex-wrap: wrap;
   }
