--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -5,7 +5,7 @@
   border-bottom-left-radius: 50% 12%;
   border-bottom-right-radius: 50% 12%;
   position: relative;
-  z-index: 999999;
+  z-index: 99;
 
   @include media-breakpoint-down(xl) {
     border-radius: 0;
@@ -22,7 +22,7 @@
   border-bottom-right-radius: 50% 4%;
   position: relative;
   background: var(--color-gray);
-  z-index: 999;
+  z-index: 99;
   @include media-breakpoint-down(xl) {
     border-radius: 0;
     padding-bottom: 40px;
