--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -6,7 +6,6 @@
   left: 0;
   padding: 16px;
   background-color: var(--color-light);
-  z-index: 10;
   height: 100vh;
   padding-top: 120px;
   @include media-breakpoint-down(xl) {
